--- a/dev/templates/index.html
+++ b/dev/templates/index.html
@@ -94,7 +94,7 @@
                         </div>
                         <div class="col-sm-12">
                             <div class="carousel js-carousel-1">
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="stock">Лучший курс 2016 года!</div>
                                     <div class="img-wrap" style="background-image: url(images/img-1.jpg);"></div>
                                     <div class="tags">
@@ -110,7 +110,7 @@
                                         <div class="group">5 курсов</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
 
                                     <div class="img-wrap" style="background-image: url(images/img-2.jpg);"></div>
                                     <div class="tags">
@@ -128,7 +128,7 @@
                                         <div class="data">Запись до 30 июля</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="stock css-color-yel">+25 к Data Science!</div>
                                     <div class="img-wrap" style="background-image: url(images/img-3.jpg);"></div>
                                     <div class="tags">
@@ -146,7 +146,7 @@
                                         <div class="group">Миникурсы</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="stock css-color-pur">Сертифицирован</div>
                                     <div class="img-wrap" style="background-image: url(images/img-4.jpg);"></div>
                                     <div class="tags">
@@ -177,7 +177,7 @@
                         </div>
                         <div class="col-sm-12">
                             <div class="carousel js-carousel-1">
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="img-wrap" style="background-image: url(images/img-4.jpg);"></div>
                                     <div class="tags">
                                         <ul>
@@ -192,7 +192,7 @@
                                         <div class="group">5 курсов</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="stock css-color-pur">Сертифицирован</div>
                                     <div class="img-wrap" style="background-image: url(images/img-5.jpg);"></div>
                                     <div class="tags">
@@ -210,7 +210,7 @@
                                         <div class="data">Запись до 30 июля</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="img-wrap" style="background-image: url(images/img-6.jpg);"></div>
                                     <div class="tags">
                                         <ul>
@@ -227,7 +227,7 @@
                                         <div class="group">Миникурсы</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
 
                                     <div class="img-wrap" style="background-image: url(images/img-4.jpg);"></div>
                                     <div class="tags">
@@ -273,7 +273,7 @@
                         </div>
                         <div class="col-sm-12">
                             <div class="carousel js-carousel-1">
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="img-wrap" style="background-image: url(images/img-7.jpg);"></div>
                                     <div class="tags">
                                         <ul>
@@ -288,8 +288,7 @@
                                         <div class="group">5 курсов</div>
                                     </div>
                                 </div>
-                                <div class="item">
-
+                                <div class="el-item-course">
                                     <div class="img-wrap" style="background-image: url(images/img-8.jpg);"></div>
                                     <div class="tags">
                                         <ul>
@@ -307,7 +306,7 @@
                                     </div>
 
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="hover-block" style="background-image: url(images/hover-img-1.png);">
                                         <div class="wraper-text">
                                             <div class="title">Рекламный блок</div>
@@ -319,7 +318,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="stock">Лучший курс 2016 года!</div>
                                     <div class="img-wrap" style="background-image: url(images/img-4.jpg);"></div>
                                     <div class="tags">
@@ -349,7 +348,7 @@
                         </div>
                         <div class="col-sm-12">
                             <div class="carousel js-carousel-1">
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="img-wrap" style="background-image: url(images/img-9.jpg);"></div>
                                     <div class="tags">
                                         <ul>
@@ -364,7 +363,7 @@
                                         <div class="group">5 курсов</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
 
                                     <div class="img-wrap" style="background-image: url(images/img-10.jpg);"></div>
                                     <div class="tags">
@@ -382,7 +381,7 @@
                                         <div class="data">Запись до 30 июля</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="img-wrap" style="background-image: url(images/img-11.jpg);"></div>
                                     <div class="tags">
                                         <ul>
@@ -399,7 +398,7 @@
                                         <div class="group">Миникурсы</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="stock">Лучший курс 2016 года!</div>
                                     <div class="img-wrap" style="background-image: url(images/img-12.jpg);"></div>
                                     <div class="tags">
@@ -436,7 +435,7 @@
                         </div>
                         <div class="col-sm-12">
                             <div class="carousel js-carousel-1">
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="img-wrap" style="background-image: url(images/img-12.jpg);"></div>
                                     <div class="tags">
                                         <ul>
@@ -452,7 +451,7 @@
                                     </div>
 
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
 
                                     <div class="img-wrap" style="background-image: url(images/img-13.jpg);"></div>
                                     <div class="tags">
@@ -471,7 +470,7 @@
                                     </div>
 
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="img-wrap" style="background-image: url(images/img-14.jpg);"></div>
                                     <div class="tags">
                                         <ul>
@@ -488,7 +487,7 @@
                                         <div class="group">Миникурсы</div>
                                     </div>
                                 </div>
-                                <div class="item">
+                                <div class="el-item-course">
                                     <div class="stock">Лучший курс 2016 года!</div>
                                     <div class="img-wrap" style="background-image: url(images/img-12.jpg);"></div>
                                     <div class="tags">
