--- a/dev/templates/specialization.html
+++ b/dev/templates/specialization.html
@@ -30,8 +30,63 @@
                 <div class="row">
                     <div class="col-sm-12 content-wrap">
                         <div class="sidebar">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet architecto, consectetur
-                                eligendi eum excepturi nam nihil repellat temporibus voluptates voluptatibus.</p>
+
+                            <div class="title-rating">
+                                <p>Оценка пользователей</p>
+                                <div class="el-rating">
+                                    <fieldset class="rating">
+                                        <input type="radio" id="star5" name="rating4" value="5"/>
+                                        <label class="full" for="star5" title="Awesome - 5 stars"></label>
+                                        <input type="radio" id="star4half"  name="rating4" value="4 and a half"/>
+                                        <label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+                                        <input type="radio" id="star4" name="rating4" value="4"/>
+                                        <label class="full" for="star4" title="Pretty good - 4 stars"></label>
+                                        <input type="radio" id="star3half" checked name="rating4" value="3 and a half"/>
+                                        <label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+                                        <input type="radio" id="star3"  name="rating4" value="3"/>
+                                        <label class="full" for="star3" title="Meh - 3 stars"></label>
+                                        <input type="radio" id="star2half" name="rating4" value="2 and a half"/>
+                                        <label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+                                        <input type="radio" id="star2" name="rating4" value="2"/>
+                                        <label class="full" for="star2" title="Kinda bad - 2 stars"></label>
+                                        <input type="radio" id="star1half" name="rating4" value="1 and a half"/>
+                                        <label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+                                        <input type="radio" id="star1" name="rating4" value="1"/>
+                                        <label class="full" for="star1" title="Sucks big time - 1 star"></label>
+                                        <input type="radio" id="starhalf" name="rating4" value="half"/>
+                                        <label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+                                    </fieldset>
+                                </div>
+                                <div class="rating-text">3.67</div>
+                                <p>
+                                    <a class="count-comment" href="#">Читать 136 отзывов</a>
+                                </p>
+                            </div>
+
+                            <div class="titles-courses">
+                                Курс: <a href="#">Введение в функциональное
+                                программирование на F#</a>
+                            </div>
+                            <div class="price">
+                                <span>6 500 </span>рублей
+                            </div>
+                            <div class="wrap-btn">
+                                <a href="#" class="el-btn pur-style">Записаться
+                                <span>начало 5 сентября <img src="images/icons/arrow-down-pure-o.svg" alt="icon"></span>
+                                </a>
+                            </div>
+                            <ul class="list-nav">
+                                <li><a href="#">Специализация</a></li>
+                                <li><a href="#">Расписание</a></li>
+                                <li><a href="#">Отзывы</a></li>
+                            </ul>
+                            <p class="style-gere">Поделиться</p>
+                            <ul class="social">
+                                <li><a class="facebook" href="#"><i class="icon-facebook"></i></a></li>
+                                <li><a class="tw" href="#"><i class="icon-tw"></i></a></li>
+                                <li><a class="gplus" href="#"><i class="icon-gplus"></i></a></li>
+                                <li><a class="youtube" href="#"><i class="icon-youtube-play"></i></a></li>
+                            </ul>
                         </div>
 
                         <div class="content">
@@ -374,9 +429,43 @@
                                 <a href="#" class="el-btn blue-style">Записаться</a>
                             </div>
 
-                            <div class="section-content">
+                            <div class="section-content course-section">
                                 <h2 class="title-section">Похожие курсы и специализации</h2>
-
+                                <a class="el-btn blue-style inverse" href="index.html">Смотреть в каталоге</a>
+                                <div class="course">
+                                    <div class="el-item-course">
+                                        <div class="img-wrap" style="background-image: url(images/img-15.png);"></div>
+                                        <div class="tags">
+                                            <ul>
+                                                <li><a href="#">МФТИ</a></li>
+                                            </ul>
+                                        </div>
+                                        <a href="#" class="name">Управление проектами в условиях динамично развивающегося
+                                            продукта. </a>
+                                        <div class="announce">
+                                            Вы научитесь сегментировать изображения, выделять на них информативные области.
+                                        </div>
+                                        <div class="bottom-item">
+                                            <div class="data">Начало 28 ноября</div>
+                                            <div class="group">Миникурсы</div>
+                                        </div>
+                                    </div>
+                                    <div class="el-item-course">
+                                        <div class="img-wrap" style="background-image: url(images/img-16.jpg);"></div>
+                                        <div class="tags">
+                                            <ul>
+                                                <li><a href="#">МФТИ</a></li>
+                                            </ul>
+                                        </div>
+                                        <a href="#" class="name">Управление проектами в условиях динамично развивающегося
+                                            продукта. Роль инвестиций
+                                            в разработке инноваций.</a>
+                                        <div class="bottom-item">
+                                            <div class="data">Начало 5 августа</div>
+                                            <div class="group">5 курсов</div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
