--- a/dev/sass/components/footer.sass
+++ b/dev/sass/components/footer.sass
@@ -34,6 +34,7 @@
       text-align: center
       font-size: 16px
       line-height: 25px
+      text-decoration: none
       transition: all .12s ease
 
       &.facebook:hover
