--- a/dev/sass/pages/specialization.sass
+++ b/dev/sass/pages/specialization.sass
@@ -52,7 +52,7 @@
       padding: 20px 30px
       border-radius: 3px
       background-color: white
-      box-shadow: 0 2px 10px rgba(black, .1)
+      box-shadow: 0 9px 24px #e6eaf8
 
   .text
     margin-bottom: 20px
@@ -69,7 +69,142 @@
     box-sizing: border-box
     border-radius: 3px
     background-color: white
-    box-shadow: 0 2px 10px rgba(black, .1)
+    box-shadow: 0 9px 24px #e6eaf8
+
+    .list-nav
+      margin: 0 -30px
+      li
+        padding: 0 30px
+        display: block
+        border-bottom: 1px solid rgba(#4a72f5, .1)
+        transition: background .2s ease
+        &:hover
+          background-color: #f5f7ff
+
+
+      a
+        display: block
+        color: black
+        text-decoration: none
+        font: 400 14px/50px $open
+        &:hover
+          text-decoration: none
+
+    .style-gere
+      color: #9b9b9b
+      font: 400 14px/50px $open
+      margin-bottom: 0
+
+    .social
+      float: left
+      @media (max-width: $screen-xs-max)
+        display: inline-block
+      li
+        float: left
+        margin-left: 10px
+        &:first-child
+          margin-left: 0
+      a
+        display: inline-block
+        width: 25px
+        height: 25px
+        border-radius: 100%
+        color: #9b9b9b
+        text-align: center
+        font-size: 16px
+        line-height: 25px
+        transition: all .12s ease
+        text-decoration: none
+
+        &.facebook:hover
+          color: #4867aa
+        &.tw:hover
+          color: #4a90e2
+        &.gplus:hover
+          color: #fb5570
+        &.youtube:hover
+          color: #d0021b
+
+    .wrap-btn
+      margin-bottom: 27px
+      .el-btn
+        border-radius: 5px
+        width: 100%
+        padding: 35px 15px 30px
+        height: 100px
+        font-size: 24px
+        font-weight: 400
+        border: none
+        &:hover
+
+          background-color: #CC455C
+          color: white
+        span
+          margin-top: 6px
+          display: block
+          color: rgba(white, .5)
+          font-size: 12px
+          img
+            vertical-align: middle
+            opacity: .5
+
+    .price
+      margin: 20px 0
+      color: black
+      font: 400 14px/36px $open
+      span
+        font-size: 36px
+
+    .titles-courses
+      color: #9b9b9b
+      font: 400 15px/24px $open
+      a
+        color: black
+        text-decoration: none
+        &:hover
+          text-decoration: none
+
+    .title-rating
+      position: relative
+      @extend %clear-fix
+      padding-bottom: 40px
+      &:before
+        position: absolute
+        height: 1px
+        bottom: 20px
+        right: -30px
+        left: -30px
+        background-color: rgba(#4a72f5, .1)
+        content: ''
+    p
+      margin-bottom: 7px
+      float: left
+      width: 100%
+
+    .el-rating, .rating-text, .count-comment
+      display: inline-block
+      vertical-align: bottom
+
+    .el-rating
+      float: left
+      line-height: 36px
+
+    .rating-text
+      color: black
+      float: left
+      margin-left: 10px
+      margin-right: 10px
+      font: 400 24px/36px $open
+
+    .count-comment
+      //width: 100%
+      color: #9b9b9b
+      font: 400 14px/1 $open
+      text-decoration: none
+      border-bottom: 1px dashed rgba(155, 155, 155, 0.5)
+      &:hover
+        border-bottom: none
+
 
   .style-text-3
     margin-bottom: 25px
@@ -414,6 +549,24 @@
       padding: 20px 0
       color: black
       font: 400 14px/21px $open
+
+  .course-section
+    @extend %clear-fix
+
+    .title-section
+      float: left
+    .el-btn
+      float: right
+
+  .course
+    float: left
+    width: 100%
+    .el-item-course
+      width: 48%
+      float: left
+      margin-right: 4%
+      &:nth-child(2n)
+        margin-right: 0
 
   .rating-section
     @extend %clear-fix
