--- a/dev/sass/pages/course.sass
+++ b/dev/sass/pages/course.sass
@@ -1,6 +1,6 @@
-// Specialization Page
+// course Page
 //-----------------------------------------------------------------------------------
-.specialization-page
+.course-page
 
 .section-banner
   min-height: 590px
@@ -147,6 +147,7 @@
 
     .wrap-btn
       margin-bottom: 27px
+
       .el-btn
         border-radius: 5px
         width: 100%
@@ -155,10 +156,13 @@
         font-size: 24px
         font-weight: 400
         border: none
-        &:hover
+        &.center
+          padding: 40px 15px
 
+        &:hover
           background-color: #CC455C
           color: white
+
         span
           margin-top: 6px
           display: block
@@ -302,10 +306,8 @@
       overflow: hidden
       border-radius: 100%
       float: left
-      opacity: 0.5
       transition: all .12s ease
-      &:hover
-        opacity: 1
+
     .text
       display: block
       margin-left: 90px
@@ -375,7 +377,7 @@
       display: inline-block
       width: 117px
       height: 6px
-      background-color: #61e7d6
+      background-color: #4a72f5
       border-radius: 2px
     p a
       margin-top: 22px
