--- a/dev/sass/style.sass
+++ b/dev/sass/style.sass
@@ -24,7 +24,8 @@
 //-----------------------------------------------------------------------------------
 @import pages/404.sass
 @import pages/index.sass
-@import pages/specialization.sass
+@import pages/course.sass
+@import pages/profession.sass
 
 
 
