--- a/dev/templates/course.html
+++ b/dev/templates/course.html
@@ -9,8 +9,8 @@
     <!-- build:section layout.header -->
     <!-- /build -->
 
-    <!-- Begin Specialization Page -->
-    <div id="page-body" class="page-body specialization-page">
+    <!-- Begin course Page -->
+    <div id="page-body" class="page-body course-page">
         <div class="section-banner">
             <div class="container">
                 <div class="row">
