--- a/dev/templates/profession.html
+++ b/dev/templates/profession.html
@@ -56,6 +56,7 @@
 
                         <!-- Begin content -->
                         <div class="content">
+                            <!-- Begin section text -->
                             <section>
                                 <p class="style-text-3"><b>Machine learning</b> represents a key evolution in the fields
                                     of
@@ -68,6 +69,9 @@
                                     intelligence...</p>
                                 <p class="style-text-3"><a href="#">Читать дальше</a></p>
                             </section>
+                            <!-- End section text -->
+
+                            <!-- Begin partner-section -->
                             <section class="css-shadow partner-section">
                                 <h2 class="title-section">Более 100 вакансий в компаниях</h2>
                                 <ul class="partner js-partner css-slider">
@@ -76,6 +80,9 @@
                                     <li><a href="#"><img src="images/partner/img-4.png" alt="img"></a></li>
                                 </ul>
                             </section>
+                            <!-- End partner-section -->
+
+                            <!-- Begin necessary-section -->
                             <section class="css-shadow necessary-section">
                                 <div class="necessary">
                                     <h2 class="title-section">Чтобы получить профессию, вам нужно:</h2>
@@ -118,11 +125,13 @@
                                     </div>
                                 </div>
                             </section>
+                            <!-- End necessary-section -->
 
                             <div class="text-center connect">
                                 <a href="#" class="el-btn pur-style">Записаться</a>
                             </div>
 
+                            <!-- Begin list ul -->
                             <section>
                                 <h2 class="title-section">Что я получу и как это работает?</h2>
                                 <ul class="list-style-1">
@@ -134,6 +143,9 @@
                                     <li>Подтвержденный одним из Топ-10 ВУЗов сертификат</li>
                                 </ul>
                             </section>
+                            <!-- End list ul -->
+
+                            <!-- Begin competence-section -->
                             <section class="css-shadow competence-section">
                                 <h2 class="title-section">Мои компетенции</h2>
                                 <div class="competence">
@@ -243,6 +255,9 @@
                                     </div>
                                 </div>
                             </section>
+                            <!-- End competence-section -->
+
+                            <!-- Begin academic-plan-section -->
                             <section class="css-shadow academic-plan-section">
                                 <h2 class="title-section">Учебный план</h2>
 
@@ -330,11 +345,13 @@
                                     </div>
                                 </div>
                             </section>
+                            <!-- End academic-plan-section -->
 
                             <div class="text-center connect">
                                 <a href="#" class="el-btn pur-style">Записаться</a>
                             </div>
 
+                            <!-- Begin branches-section -->
                             <section class="css-shadow branches-section">
                                 <h2 class="title-section">Отрасли в которых востребованы Data Scientist’s</h2>
                                 <ul>
@@ -348,6 +365,9 @@
                                     </li>
                                 </ul>
                             </section>
+                            <!-- End branches-section -->
+
+                            <!-- Begin course-section -->
                             <section class="course-section">
                                 <div class="row">
                                     <h2 class="title-section col-sm-8">Другие профессии</h2>
@@ -394,6 +414,7 @@
                                     </div>
                                 </div>
                             </section>
+                            <!-- End course-section -->
                         </div>
                         <!-- End content -->
 
